--- a/index.css
+++ b/index.css
@@ -1,5 +1,29 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box
+    font-style: none;
 }
+
+.body{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+}
+
+.header{
+    text-align: right;
+    width: 90% px
+    height: 10%;
+    backgroung-color: yellow;
+    flex-direction: row;
+    justify-content: ;
+}
+
+#opciones{
+    widht: 10 px;
+    height: 10 px;
+
+}
+
+
