--- a/index.css
+++ b/index.css
@@ -7,39 +7,26 @@
 
 body{
     width: 100vw;
-    height: 100vh;
+    height: 100;
     justify-content: center;
-    align-items: center;
 }
 
 .nav{
     width: 100%;
-    height: 15%;
+    height: 10%;
     display: flex;
     flex-direction: row;
     justify-content:flex-end;
-    font-size:90%;
+    font-size:100%;
 }
 
-.gmail{
-    padding: 2% 1%;
+.nav > div{
+    padding: 1%
 }
 
-.imágenes{
-    padding: 2% 1%;
-}
-
-.menú{
-    padding: 2%;
-}
-
-.perfil{
-    padding-top: 1%;
-}
 .perfil img{
     border-radius: 50%;
-    border: black 1px;
-    height: 50%;
+    height: 80%;
 }
 
 .google{
@@ -49,8 +36,8 @@ body{
 }
 
 .google img{
-    width: 55%;
-    height: 70%;
+    width: 30%;
+    height: 60%;
 }
 
 .búsqueda{
@@ -84,27 +71,39 @@ body{
 
 
 .botones{
-    background-color: yellow;
     width: 100%;
-    height: 20%;
-    padding: 7%;
+    height: 10%;
     display: flex;
-    justify-content: center;
-    align-content: center;
+    justify-content: center; 
     font-size: 100%;
     
 }
 
 .botón1{
-    background-color: #f8f9fa;
+    display: flex;
+    flex-direction:row;
+    align-self: center;
     border-color: white;
-    padding: 15px;
+    padding-right: 2%;
 }
 
 .botón2{
+    display: flex;
+    flex-direction:row;
+    align-self: center;
+    border-color: white;
+}
+
+.botón1 button{
+    width: 150px;
     background-color: #f8f9fa;
     border-color: white;
-    padding: 15px;
+}
+
+.botón2 button{
+    width: 150px;
+    background-color: #f8f9fa;
+    border-color: white;
 }
 
 .español{
@@ -114,12 +113,13 @@ body{
     display: flex;
     justify-content: center;
     align-content: flex-end;
+    font-size: 80%;
 }
 
 .méxico{
     width: 100%;
     height: 5%;
-    padding: 3%;
+    padding: 10px;
     background-color: #f2f2f2;
     display: flex;
     justify-content: flex-start;
@@ -128,20 +128,19 @@ body{
 
 .footer{
     width: 100%;
-    height: 7%;
-    padding: 4px;
+    height: 12%;
+    padding: 10px;
     background-color: #f2f2f2;
     display: flex;
     flex-flow: row;
-    font-size: 100%;
-    align-content: center;
-    border-top: #dfe1e4 ;
+    justify-content: center;
 }
 
-footer .article{
+.footer > article{
+    display: flex;
+    align-self: center;
     width: 100%;
-    height: 10%;
-    padding: 10%;
-    margin: 10%;
-    align-self: center;  
+    height: 8%;
+    font-size: 100%;
 }
+
