--- a/index.css
+++ b/index.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body{
     width: 100vw;
     height: 100vh;
     justify-content: center;
+    font-style: roboto;
 }
 
 .nav{
@@ -132,6 +133,7 @@ body{
 }
 
 .footer{
+    font-style: roboto;
     width: 100%;
     height: 12%;
     padding: 10px;
