--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: black;
 }
 
 .nav{
@@ -28,7 +29,7 @@
 
 .google{
     width: 100%;
-    height: 30%;
+    height: 25%;
     display:flex;
     justify-content: center;
 }
@@ -57,8 +58,8 @@
 
 .inpute{
     position: center;
-    width: 90%;
-    height: 10%;
+    width: 50%;
+    height: 8%;
     padding: 1%;
     border: solid 2px#ccc;
     border-radius: 40px;
@@ -69,9 +70,9 @@
 .buscar{
     position: absolute;
     width: 10%;
-    height: 40%;
-    top: 41%;
-    right: 2%;
+    height: 30%;
+    top: 37%;
+    right: 19%;
     color: #777;
 }
 
@@ -79,48 +80,64 @@
 
 .botones{
     width: 100%;
-    height: 5%;
+    height: 15%;
     display: flex;
     justify-content: center; 
-    font-size: 100%;
+    font-size: 90%;
     
 }
 
 .botón1{
+    height: 35%;
     display: flex;
     flex-direction:row;
     align-self: center;
-    padding-right: 2%;
+    padding-right: 1%;
+    border-color: #f8f9fa;
 }
 
 .botón2{
+    height: 35%;
     display: flex;
     flex-direction:row;
     align-self: center;
+    border-color: #f8f9fa;
 }
 
 .botón1 button{
-    width: 150px;
+    width: 155px;
     background-color: #f8f9fa;
+    box-shadow: none;
     border-color: #f8f9fa;
-    box-shadow: white;
     margin: none;
-    border-radius: 3px;
+    border: white 1px;
+    transition: all 0.2 s;
+
+}
+
+.botón1 button:hover{
+    cursor: pointer;
+    border:#b1b0b0 solid 1px;
 }
 
 .botón2 button{
-    width: 150px;
+    width: 155px;
     background-color: #f8f9fa;
-    border-color: #f8f9fa;
-    box-shadow: white;
+    box-shadow: none;
     margin: none;
-    border-radius: 3px;
+    border: white 1px;
+    transition: all 0.2 s;
+}
+
+.botón2 button:hover{
+    cursor: pointer;
+    border:#b1b0b0 solid 1px;
 }
 
 .español{
     width: 100%;
-    height: 20%;
-    padding: 10px;
+    height: 30%;
+    padding: 9px;
     display: flex;
     justify-content: center;
     align-content: flex-end;
@@ -129,7 +146,7 @@
 
 .méxico{
     width: 100%;
-    height: 5%;
+    height: 6%;
     padding: 10px;
     background-color: #f2f2f2;
     display: flex;
@@ -137,33 +154,47 @@
     align-content: flex-end;
 }
 
+.texto-méxico{
+    width: 50%;
+    padding-left: 2%;
+    align-self: center;
+}
+
 .footer{
     font-style: roboto;
     width: 100%;
-    height: 10%;
+    height: 6%;
     background-color: #f2f2f2;
+    border: solid #cfcfcf 1px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: nowrap;
 }
 
 .sección1{
+    padding-left: 2%;
+    width: 50%;
     display: flex;
-    flex-direction: column;
     flex-direction: row;
+    align-self: center;
+    justify-content: flex-start;
 }
 
 .sección1 > article{
-    padding: 5px;
+    padding: 2%;
     border-right: 5px;
 }
 
 .sección2{
+    padding-right: 2%;
+    width: 50%;
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
+    align-self: center;
 }
 
 .sección2 > article{
-    padding: 5px;
+    padding: 2%;
     border-right: 5px;
 }
